// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NGLComponent Should match existing snapshot when canvas is available 1`] = `
<NGLComponent>
  <div
    id="NGLContainer"
  >
    <div
      style={
        Object {
          "height": 400,
          "width": 400,
        }
      }
    />
  </div>
</NGLComponent>
`;

exports[`NGLComponent Should match existing snapshot when canvas isn't available. 1`] = `
<div
  id="NGLContainer"
>
  <div
    style={
      Object {
        "height": 400,
        "width": 400,
      }
    }
  />
</div>
`;
